[package]
name = "clean-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.1" }
axum = { version = "0.6.20", features = ["headers"] }
env_logger = "0.11.3"
log = { version = "0.4.21" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = '1.0.198', features = ["derive"] }
lazy_static = { version = "1.4.0" }
reqwest = { version = "0.12.3", features = ["json"] }
async-trait = "0.1.80"
